# ksh2kson

./: CMakeLists.txt  README.md
samples/: catsjumpanywhere_ex.ksh  inmydream_ex.ksh  vsinvader_in.ksh
src/: main.cpp
