cmake_minimum_required(VERSION 2.8)
project(ksh2kson CXX)
set(CMAKE_CXX_STANDARD 17)
if(MSVC)
    set(CMAKE_CXX_FLAGS "-O2 -Wall")
else(MSVC)
    set(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra -Wpedantic -Wno-unused-parameter")
endif(MSVC)
file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_executable(ksh2kson ${SRCS})
target_include_directories(ksh2kson PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_include_directories(ksh2kson PRIVATE ${PROJECT_SOURCE_DIR}/third_party/json/include)
