cmake_minimum_required(VERSION 3.8)
project(ksh2kson CXX)
file(GLOB_RECURSE sources ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_executable(ksh2kson ${sources})
target_compile_options(ksh2kson PUBLIC -O2 -Wall)
target_compile_features(ksh2kson PUBLIC cxx_std_17)

target_include_directories(ksh2kson PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_include_directories(ksh2kson PRIVATE ${PROJECT_SOURCE_DIR}/third_party/json/include)
add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/ksh)
target_link_libraries(ksh2kson ksh)